--- a/new.html
+++ b/new.html
@@ -2,7 +2,7 @@
 <head>
     <title>Form inputs</title>
 </head>
-<body>
+<body bg color="green">
 <form>
 <fieldset>
     <label>Enter the Name:</label><input type="text" name=name><br>
